<resources>
    <string name="app_name">UiGitsTugas18</string>
    <string name="home">HOME</string>
    <string name="nama_buah">Nama Buah</string>
    <string name="add">ADD</string>
    <string name="harga">harga</string>
    <string name="id">id</string>
    <string name="simpan">simpan</string>
    <string name="update">UPDATE</string>
    <string name="detail">DETAIL</string>
    <string name="deleted">Deleted</string>
    <string name="rp">RP.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="creat_account">Create Account ?</string>
    <string name="empty">EMPTY</string>
    <string name="buah">BUAH</string>
    <string name="person">PERSON</string>
    <string name="nama">nama</string>
    <string name="tittle">tittle</string>
    <string name="avatar">avatar</string>
    <string name="buah_buahan">Buah-buahan</string>
    <string name="orang">Orang</string>
    <string name="upload">Upload</string>
    <string name="url">avatar url :</string>
    <string name="welcome_to_app">Welcome to app</string>
    <string name="pengaturan">pengaturan</string>
    <string name="logout">logout</string>
    <string name="exit">Exit</string>
    <string name="send_notification">Send Notification</string>
    <string name="message">Message</string>
    <string name="addnotif">ADD NOTIF</string>
    <string name="welcome_to_the_app">Welcome To The App</string>
    <string name="add_auth">add auth</string>
    <string name="updateusr">update</string>
    <string name="dasboard">Dasboard</string>
    <string name="pegawai">Pegawai</string>
    <string name="user">user</string>
    <string name="_3_items">3 Items</string>
    <string name="kosong" />
    <string name="_1">1</string>
    <string name="or_login_with_finger_print">or login with fingerprint</string>
    <string name="id_device">id device</string>
</resources>